# systemc-common-practices

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: style.yml
MasterIDExtension/: CMakeLists.txt  README.md
MasterIDExtension/include/scp/: MasterIDExtension.h
PathTraceExtension/: CMakeLists.txt  README.md
PathTraceExtension/include/scp/: PathTraceExtension.h
docs/: DEVELOPMENT.md
examples/: CMakeLists.txt  smoke.cc  smoke_logger.cc  smoke_report.cc
examples/audio_example/: CMakeLists.txt
examples/audio_example/include/: argparser.h  async_event.h  audiooutput.h  midiplayer.h
examples/audio_example/src/: main.cc
report/: CMakeLists.txt  README.md  readme.md
report/include/sc_log/: sc_log.h
report/include/scp/: helpers.h  logger.h  report.h  report_cci_setter.h  sc_report.h
report/src/: logger.cpp  report.cpp  sc_report.cpp
report/src/scp/: report.cpp  report.h
report/tests/: CMakeLists.txt  logger.cc
tests/: CMakeLists.txt  smoke.cc
thread_utils/: CMakeLists.txt  README.md
thread_utils/include/scp/thread_utils/: async_event.h  keep_alive.h  real_time_limiter.h  run_on_systemc.h
thread_utils/tests/: CMakeLists.txt  realtimelimiter_test.cc  runonsysc_keepalive_test.cc
tlm_extensions/initiator_id/: CMakeLists.txt  README.md
tlm_extensions/initiator_id/include/scp/tlm_extensions/: initiator_id.h
tlm_extensions/initiator_id/tests/: CMakeLists.txt  smoke.cc
tlm_extensions/path_trace/: CMakeLists.txt  README.md
tlm_extensions/path_trace/include/scp/tlm_extensions/: path_trace.h
tlm_extensions/path_trace/tests/: CMakeLists.txt  smoke.cc
utils/: check_format.sh
